Changelog for Miosix np embedded OS

- Fixed MPU size calculation, added _elf_pool_start and _elf_pool_end symbols
  that a linker script supporting processes must provide.
- Thread creation no longer calls errorHandler(OUT_OF_MEMORY) if there
  is no memory to create a thread. This has been done to prevent system
  reboots when the (kernel) heap is full, especially if a process creates
  another process.
- Refactored Thread::createUserspace() to call Thread::doCreate()
- Added a per-process FileDescriptorTable
- Added ProcessBase class. The kernel used to have a null pointer as process,
  now it has a ProcessBase instance, and is the only entity that has an
  instance of PRocessBase that is not also an instance of Process.
- Merged processes branch
- breaking change: updated newlib patch to make off_t a 64bit type. This allows
  accessing files larger than 4GByte for filesystems that support it (currently,
  only DevFs). This change requires recompiling GCC!
- Changed Fat32Fs so that reads and writes are directed to a generic file
  instead of to the disk interface. Added temporary DiskAdapter class to
  maintain compatibility with the old interface until bsps are upgraded.
- Major rework and simplification of the DevFs infrastructure. Getting rid of
  stateless device files. All devices are now stateful, and to make a device you
  only have to subclass Device and implement readBlock()/writeBlock()/ioctl()
- Removed sync() syscall, replaced by ioctl()
- Added ioctl() syscall, and miosix/filesystem/ioctl.h with list of IOCTLs
- Removed reliance on global variable for FatFs, to have allow mounting more
  than one independent Fat32 filesystem.
- First working but inefficient unicode support for fat32
- Fixed a bug in fat32 directory listing causing file names to be skipped when
  listing large directories.
- Added basic unicode helper functions
- Implemented inode support in FAT32
- Started implementing FAT32 directory listing, still needs work.